# p5r-assistant

./: .gitignore  README.md  pyproject.toml  run.cmd  run.ps1
data/: guide.json  settings.json
docs/superpowers/plans/: 2026-06-14-p5r-assistant-v1.md  2026-06-14-real-window-test-fix-handoff.md  2026-06-14-windows-encoding-launch.md
docs/superpowers/specs/: 2026-06-14-p5r-assistant-design.md  2026-06-14-windows-encoding-launch-design.md
p5r_assistant/: app.py  desktop.py  recognition.py  runtime.py
p5r_assistant/capture/: choice_region.py  crop.py  screenshot.py  window_finder.py
p5r_assistant/config/: settings.py
p5r_assistant/guide/: importer.py  repository.py  schema.py
p5r_assistant/input/: gamepad.py  keyboard_hotkey.py
p5r_assistant/match/: aliases.py  matcher.py  normalize.py
p5r_assistant/ocr/: engine.py  preprocess.py  rapidocr_engine.py
p5r_assistant/ui/: overlay.py  settings_window.py  tray.py
tests/: test_app_cli.py  test_app_runtime_cli.py  test_capture_ocr_interfaces.py  test_choice_region_capture.py  test_desktop_controller.py  test_gamepad_listener.py  test_guide_importer.py  test_matcher.py  test_normalize.py  test_overlay.py  test_overlay_format.py  test_overlay_rich_text.py  test_qt_hotkey_dispatcher.py  test_qt_overlay_fullscreen.py  test_rapidocr_engine.py  test_recognition.py  test_runtime.py  test_settings_aliases.py  test_smoke.py  test_tray_wiring.py  test_window_finder.py  test_windows_launch_scripts.py
